@@ -2775,11 +2775,11 @@ be used during combat.
 
 WILLQUALIFY=\
 Command : WILLQUALIFY\n\r\
-Usage   : WILLQUALIFY ([LEVEL]) ([CLASS NAME]) ([SKILLTYPE]/EXPERTISE)...\n\r\
+Usage   : WILLQUALIFY ([LEVEL]) ([CLASS NAME]) ([(NO)SKILLTYP]/(NO)EXPER)...\n\r\
 Example : willqualify 10\n\r\
 Example : willqualify 30 fighter\n\r\
 Example : willqualify expertise\n\r\
-Example : willqualify 50 divination invocation/evocation expertise\n\r\
+Example : willqualify 50 divination invocation/evocation noexpertise\n\r\
 Short(s): qual\n\r\
 Lists all of the skills, spells, languages, prayers, expertises, and/or songs \
 which will be qualified for by the given class, level, and skill type, \
