@@ -7,6 +7,7 @@
   6. Look can now target items in open containers
   7. Prop_*Adjuster now supports ABLEPROFS and ABLELVLS, and will give log errors in arguments
   8. Socials now support qualifying zappermasks to use the social
+  9. WILLQUALIFY now supports NOx syntax to filter OUT things.
 
 # Build 5.9.10 Release 6/16/2020
   1. Wands/etc have enchant type as a restriction, WandMaking/StaffMaking/Rodsmithing support.
